--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "linkedin_selenium"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = [
     {name = "DSNoNintendo",email = "darylkstronge@gmail.com"}
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "selenium (>=4.32.0,<5.0.0)"
+    "selenium (>=4.32.0,<5.0.0)",
+    "seleniumbase (>=4.41.1,<5.0.0)"
 ]
 
 
